[gd_scene load_steps=4 format=3 uid="uid://drsuhja1myvjv"]

[ext_resource type="Script" path="res://Scenes/GameMainScreenScenes/GameScenes/resource_screen.gd" id="1_akkno"]
[ext_resource type="Script" path="res://Scenes/GameMainScreenScenes/GameScenes/ResourceScreen/ResourcePage.gd" id="2_0raen"]
[ext_resource type="PackedScene" uid="uid://co5g5f1jr31nm" path="res://Scenes/GameMainScreenScenes/GameScenes/ResourceScreen/bar_item.tscn" id="3_2g2q1"]

[node name="ResourceScreen" type="VBoxContainer"]
custom_minimum_size = Vector2(1055, 0)
script = ExtResource("1_akkno")

[node name="BarsMC" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 770)
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25

[node name="Background" type="Control" parent="BarsMC"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="BarsMC/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.427451, 0.584314, 0.533333, 1)

[node name="MC" type="MarginContainer" parent="BarsMC/Background/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="ColorRect" type="ColorRect" parent="BarsMC/Background/ColorRect/MC"]
layout_mode = 2
color = Color(0.309804, 0.443137, 0.4, 1)

[node name="MC" type="MarginContainer" parent="BarsMC"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="TitleVBox" type="VBoxContainer" parent="BarsMC/MC"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="BarsMC/MC/TitleVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 37
text = "Resources"

[node name="MC" type="MarginContainer" parent="BarsMC/MC/TitleVBox"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 9
theme_override_constants/margin_right = 22
theme_override_constants/margin_bottom = 15

[node name="LabelHBox" type="HBoxContainer" parent="BarsMC/MC/TitleVBox/MC"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_constants/separation = 24
alignment = 2

[node name="GoldMC" type="MarginContainer" parent="BarsMC/MC/TitleVBox/MC/LabelHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="BarsMC/MC/TitleVBox/MC/LabelHBox/GoldMC"]
layout_mode = 2
color = Color(0.568627, 0.560784, 0.184314, 1)

[node name="MC" type="MarginContainer" parent="BarsMC/MC/TitleVBox/MC/LabelHBox/GoldMC/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GoldLabel" type="Label" parent="BarsMC/MC/TitleVBox/MC/LabelHBox/GoldMC/ColorRect/MC"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 27
text = "Gold: 10k"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MagicMC" type="MarginContainer" parent="BarsMC/MC/TitleVBox/MC/LabelHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="BarsMC/MC/TitleVBox/MC/LabelHBox/MagicMC"]
layout_mode = 2
color = Color(0.462745, 0.254902, 0.8, 1)

[node name="MC" type="MarginContainer" parent="BarsMC/MC/TitleVBox/MC/LabelHBox/MagicMC/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MagicLabel" type="Label" parent="BarsMC/MC/TitleVBox/MC/LabelHBox/MagicMC/ColorRect/MC"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 27
text = "Magic: 10k"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="BarsMC/MC/TitleVBox/MC/LabelHBox"]
custom_minimum_size = Vector2(190, 0)
layout_mode = 2
color = Color(0.227451, 0.333333, 0.298039, 1)

[node name="BeaverLabel" type="Label" parent="BarsMC/MC/TitleVBox/MC/LabelHBox/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 22
text = "Beaver"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect2" type="ColorRect" parent="BarsMC/MC/TitleVBox/MC/LabelHBox"]
custom_minimum_size = Vector2(190, 0)
layout_mode = 2
color = Color(0.227451, 0.333333, 0.298039, 1)

[node name="WoodCampsLabel" type="Label" parent="BarsMC/MC/TitleVBox/MC/LabelHBox/ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 22
text = "Woodcamps"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResourcePage" type="MarginContainer" parent="BarsMC/MC/TitleVBox" groups=["ResourcePage"]]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 15
script = ExtResource("2_0raen")

[node name="BarList" type="VBoxContainer" parent="BarsMC/MC/TitleVBox/ResourcePage"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BarItem1" parent="BarsMC/MC/TitleVBox/ResourcePage/BarList" instance=ExtResource("3_2g2q1")]
layout_mode = 2

[node name="BarItem2" parent="BarsMC/MC/TitleVBox/ResourcePage/BarList" instance=ExtResource("3_2g2q1")]
layout_mode = 2

[node name="BarItem3" parent="BarsMC/MC/TitleVBox/ResourcePage/BarList" instance=ExtResource("3_2g2q1")]
layout_mode = 2

[node name="BarItem4" parent="BarsMC/MC/TitleVBox/ResourcePage/BarList" instance=ExtResource("3_2g2q1")]
layout_mode = 2

[node name="BarItem5" parent="BarsMC/MC/TitleVBox/ResourcePage/BarList" instance=ExtResource("3_2g2q1")]
layout_mode = 2

[node name="PageButtonsMC" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = -4
theme_override_constants/margin_bottom = 13

[node name="ColorRect" type="ColorRect" parent="PageButtonsMC"]
layout_mode = 2
color = Color(0.196078, 0.537255, 0.470588, 1)

[node name="MC" type="MarginContainer" parent="PageButtonsMC/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 3
theme_override_constants/margin_bottom = 3

[node name="HBox" type="HBoxContainer" parent="PageButtonsMC/ColorRect/MC"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Page1Button" type="Button" parent="PageButtonsMC/ColorRect/MC/HBox"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
text = "Classic"

[node name="Page2Button" type="Button" parent="PageButtonsMC/ColorRect/MC/HBox"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
text = "Rare"

[node name="Page3Button" type="Button" parent="PageButtonsMC/ColorRect/MC/HBox"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
text = "Mythic"

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 29

[connection signal="button_down" from="PageButtonsMC/ColorRect/MC/HBox/Page1Button" to="." method="_on_page_1_button_button_down"]
[connection signal="button_down" from="PageButtonsMC/ColorRect/MC/HBox/Page2Button" to="." method="_on_page_2_button_button_down"]
[connection signal="button_down" from="PageButtonsMC/ColorRect/MC/HBox/Page3Button" to="." method="_on_page_3_button_button_down"]
